--- a/Frontend/src/views/Order.css
+++ b/Frontend/src/views/Order.css
@@ -12,4 +12,14 @@
 
 .ordercontainer {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thankyoumessage {
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
 }
